--- a/htdocs/lib/users.ini
+++ b/htdocs/lib/users.ini
@@ -1,3 +1,9 @@
 [Admin]
+name=Admin
+password=098f6bcd4621d373cade4e832627b4f6
+permission=-1
+
+[bla]
+name=bla
 password=098f6bcd4621d373cade4e832627b4f6
 permission=-1
