--- a/htdocs/lib/users.ini
+++ b/htdocs/lib/users.ini
@@ -1,7 +1,9 @@
 [Admin]
 password=098f6bcd4621d373cade4e832627b4f6
 permission="-1"
+active=1
 
 [bla]
 password=098f6bcd4621d373cade4e832627b4f6
 permission="-1"
+active=0
