--- a/htdocs/lib/users.ini
+++ b/htdocs/lib/users.ini
@@ -6,4 +6,14 @@ active=1
 [bla]
 password=098f6bcd4621d373cade4e832627b4f6
 permission=server1,serv3
-active=1
+active=0
+
+[demo]
+password=fe01ce2a7fbac8fafaed7c982a04e229
+permission=-1
+active=0
+
+[blabla]
+password=128ecf542a35ac5270a87dc740918404
+permission=
+active=0
