--- a/htdocs/lib/users.ini
+++ b/htdocs/lib/users.ini
@@ -1,6 +1,6 @@
-[Admin]
-password=098f6bcd4621d373cade4e832627b4f6
+[lucien]
+password=1158e33ff2ca9c29ba4c7094503743ba
 permission=-1
 active=1
+lang=de
 token=1392154580
-lang="en"
