--- a/htdocs/lib/users.ini
+++ b/htdocs/lib/users.ini
@@ -3,4 +3,10 @@ password=1158e33ff2ca9c29ba4c7094503743ba
 permission=-1
 active=1
 lang=de
-token=1392154580
+token=1395192445
+
+[test123]
+password=202cb962ac59075b964b07152d234b70
+permission=-1
+active=1
+lang=en
